Add support for symfony 4

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.0.0",
+        "php": "^7.1.0",
         "sonatra/block": "^1.0.0",
         "sonatra/bootstrap": "^1.0.0",
         "sonatra/ajax": "^1.0.0",
